--- a/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CustomerOrder/Default.cshtml
@@ -10,10 +10,6 @@
 
 <link href="~/css/會員中心/Table.css" rel="stylesheet" />
 <!--RWD CSS-->
-@*<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.3.0/css/responsive.dataTables.min.css" />*@
-
-
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
 
@@ -32,10 +28,10 @@
 <table id="table_id" class="display responsive nowrap">
     <thead>
         <tr>
-            <th>
+            <th >
                 編號
             </th>
-            <th>
+            <th class="thname">
                 商品名稱
             </th>
             <th>
@@ -47,9 +43,9 @@
             <th>
                 訂單狀態
             </th>
-            <th>
+            <th class="thbtn">
             </th>
-            <th>
+            <th class="thbtn">
             </th>
 
         </tr>
@@ -65,7 +61,9 @@
                         @count
                     </td>
                     <td>
-                        <a type="button" data-bs-toggle="modal" data-bs-target="#ORD" onclick="Odd('@Url.Action("OrderDE", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">@Html.DisplayFor(modelItem => item.商品名稱)</a>
+
+                        <a type="button" class="tdname" data-bs-toggle="modal" data-bs-target="#ORD" onclick="Odd('@Url.Action("OrderDE", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">@Html.DisplayFor(modelItem => item.商品名稱)</a>
+
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.訂購日期)
@@ -80,24 +78,32 @@
                     @{
                         if (item.訂單狀態 == "訂單完成" && item.評論狀態 <= 0)
                         {
-                            <td>
+
+                            <td class="tbbtn" style="max-width:92px">
+
                                 <a class="btn btn-outline-success rv" id="@item.訂單編號" data-bs-toggle="modal" data-bs-target="#exampleModal"onclick="OrderCancel('@Url.Action("CommentCreate", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">我要評論</a>
                             </td>
                         }
                         else
                         {
-                            <td>
+
+                            <td class="tbbtn"style="max-width:92px">
+
                             </td>
                         }
                         if (item.訂單狀態 == "訂單完成")
                         {
-                            <td>
+
+                            <td class="tbbtn">
+
                                 <a class="btn btn-outline-danger Cancel" id="Cancel" data-bs-toggle="modal" data-bs-target="#exampleModal"onclick="OrderCancel('@Url.Action("OrderCancel", "CustomerCenter", new {id=item.訂單編號 }, Context.Request.Scheme)',null)">申請取消</a>
                             </td>
                         }
                         else
                         {
-                            <td>
+
+                            <td class="tbbtn">
+
                             </td>
                         }
 
