--- a/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
+++ b/MIST143_Traveler/Views/ProductListPage2/ProductListPage.cshtml
@@ -99,7 +99,7 @@
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
+                                    <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="美國" id="flexCheckDefault">
                                     <label id="c5" value="美國">美國</label>(<span></span>)
                                 </div>
                             </div>
@@ -114,15 +114,15 @@
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
                                                <div class="form-check">
-                                                   <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
+                                                                  <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="冰島" id="flexCheckDefault">
                                                    <label id="c6" value="冰島">冰島</label>(<span></span>)
                                                </div>
                                                <div class="form-check">
-                                                   <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault">
+                                                                  <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="芬蘭" id="flexCheckDefault">
                                                    <label id="c7" value="芬蘭">芬蘭</label>(<span></span>)
                                                </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" name="info[]" value="" id="flexCheckDefault" disabled>
+                                                   <input class="form-check-input flexCheckDefault" type="checkbox" name="info[]" value="挪威" id="flexCheckDefault" disabled>
                                     <label>挪威</label>
                                 </div>
                                 <div class="form-check">
