--- a/MIST143_Traveler/wwwroot/css/travelIndex.css
+++ b/MIST143_Traveler/wwwroot/css/travelIndex.css
@@ -88,7 +88,7 @@
 .secondary-nav {
   width: 1200px;
   height: 50px;
-  margin: 10px auto 0;
+  margin: 0 auto 0;
 }
 .secondary-nav-container {
   padding: 1px 0.8em;
@@ -514,16 +514,15 @@ ul {
             background-color: #fff;
             color: #333;
             display: block;
-            padding: 0 20px;
+            padding: 0px 20px;
             text-decoration: none;
-            line-height: 35px;
-           
+            line-height: 40px;
         }
-            ul.drop-down-menu a:hover {
-                /* 滑鼠滑入按鈕變色*/
-                background-color: #ef5c28;
-                color: #fff;
-            }
+ ul.drop-down-menu a:hover {
+     /* 滑鼠滑入按鈕變色*/
+     background-color: #ef5c28;
+     color: #fff;
+ }
 
         ul.drop-down-menu li:hover > a {
             /* 滑鼠移入次選單上層按鈕保持變色*/
@@ -533,38 +532,38 @@ ul {
 
         ul.drop-down-menu ul {
    /*         border: #ccc 1px solid;*/
-            position: absolute;
-            z-index: 99;
-            left: -1px;
-            top: 100%;
-            min-width: 180px;
-        }
+    position: absolute;
+    z-index: 99;
+    left: -1px;
+    top: 100%;
+    min-width: 180px;
+}
 
-            ul.drop-down-menu ul li {
-                border-bottom: #ccc 1px solid;
-            }
+ul.drop-down-menu ul li {
+    border-bottom: #ccc 1px solid;
+}
 
-                ul.drop-down-menu ul li:last-child {
-                    border-bottom: none;
-                }
+    ul.drop-down-menu ul li:last-child {
+        border-bottom: none;
+    }
 
-            ul.drop-down-menu ul ul {
-                /*第三層以後的選單出現位置與第二層不同*/
-                z-index: 999;
-                top: 10px;
-                left: 90%;
-            }
+ul.drop-down-menu ul ul {
+    /*第三層以後的選單出現位置與第二層不同*/
+    z-index: 999;
+    top: 10px;
+    left: 90%;
+}
 
-        ul.drop-down-menu ul {
-            /*隱藏次選單*/
-            display: none;
+ul.drop-down-menu ul {
+    /*隱藏次選單*/
+    display: none;
    /*         background-color: white;*/
-        }
+}
 
-        ul.drop-down-menu li:hover > ul {
-            /* 滑鼠滑入展開次選單*/
-            display: block;
-        }
+ul.drop-down-menu li:hover > ul {
+    /* 滑鼠滑入展開次選單*/
+    display: block;
+}
 .box {
     width: 300px;
 }
