--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                     }
                 }
 
-                <a href="@Url.Content("~/Shopping/ShoppingCartSession")">購物車</a>
+                <a href="@Url.Content("~/Shopping/ShoppingCartSession")">已報名行程</a>
 
                 @{
                     if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
