--- a/MIST143_Traveler/Views/Home/ContactCenter.cshtml
+++ b/MIST143_Traveler/Views/Home/ContactCenter.cshtml
@@ -1,9 +1,10 @@
-﻿@using Microsoft.AspNetCore.Http
+﻿
+@using Microsoft.AspNetCore.Http
 @using System.Text.Json;
 @inject IHttpContextAccessor Accessor
-@{
+@*@{
     ViewData["Title"] = "ContactCenter";
-}
+}*@
 @section Styles{
     <link href="~/css/924自用.css" rel="stylesheet" />
     <link href="~/css/style.css" rel="stylesheet" />
@@ -49,23 +50,35 @@
                 <div class="row row-cols-md-3">
                     <div class="col">
                         <div class="card order" style="width: 18rem">
-                            @{var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
-                                var v = JsonSerializer.Deserialize<Member>(OBJ);
-                                @*<a href="@Url.Action("List","CustomerCenter",new {v.Email})">*@
-                                <a href="@Url.Action("List","CustomerCenter",new {v.MembersId})">
-
-                                    <div class="card-body">
-                                        <img src="@Url.Content("~/images/contact/order1.png")" />
-                                        <h5 class="card-title">查詢訂單狀態</h5>
-
-                                        <!-- <a href="#" class="btn btn-warning">Go somewhere</a> -->
-                                    </div>
+                            @{if (Accessor.HttpContext.Session.Keys.Contains(CDictionary.SK_Login))
+                                {
+                                    var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+                                    var v = JsonSerializer.Deserialize<Member>(OBJ);
+                                    <a href="@Url.Action("List", "CustomerCenter", new {v.MembersId})">
+                                        <div class="card-body">
+                                            <img src="@Url.Content("~/images/contact/order1.png")" />
+                                            <h5 class="card-title">查詢訂單狀態</h5>
+                                        </div>
+                                    </a>
+                                }
+                            else
+                               {
+                               <a href="@Url.Action("List", "CustomerCenter")">
+                                <div class="card-body">
+                                <img src="@Url.Content("~/images/contact/order1.png")" />
+                                <h5 class="card-title">查詢訂單狀態</h5>
+                                </div>
                                 </a>
-
+                                }
                             }
 
 
+
+
+
+
                         </div>
+
                     </div>
                     <div class="col">
                         <div class="card order" style="width: 18rem">
@@ -141,7 +154,7 @@
                             data-bs-target="#flush-collapseOne"
                             aria-expanded="false"
                             aria-controls="flush-collapseOne">
-                        Star 積分怎麼用？
+                        優惠券怎麼用？
                     </button>
                 </h2>
                 <div id="flush-collapseOne"
@@ -197,7 +210,7 @@
                             data-bs-target="#flush-collapseThree"
                             aria-expanded="false"
                             aria-controls="flush-collapseThree">
-                        如何獲得 Star 積分？
+                        如何獲得優惠券？
                     </button>
                 </h2>
                 <div id="flush-collapseThree"
@@ -223,7 +236,7 @@
                             data-bs-target="#flush-collapseFour"
                             aria-expanded="false"
                             aria-controls="flush-collapseFour">
-                        Star 積分會過期嗎？
+                        優惠券會過期嗎？
                     </button>
                 </h2>
                 <div id="flush-collapseFour"
