--- a/MIST143_Traveler/Views/Shared/Components/CouponAll/Default.cshtml
+++ b/MIST143_Traveler/Views/Shared/Components/CouponAll/Default.cshtml
@@ -1,10 +1,9 @@
-
-﻿@model List<MIST143_Traveler.MViewModel.我的優惠券>
+﻿@model MIST143_Traveler.MViewModel.會員中心檢視優惠券
 @using Microsoft.AspNetCore.Http
 @using System.Text.Json;
 @inject IHttpContextAccessor Accessor
 @{
-    ViewData["Title"] = "CouponExp";
+    ViewData["Title"] = "CouponAll";
 }
 <div class="container" id="COCO">
     <div class="row row-2">
@@ -12,7 +11,7 @@
 
         @{
             List<string> Coupon = new List<string>();
-            foreach (var co in Model)
+            foreach (var co in Model.優惠券列表)
             {
                 if (co.CouponStatus == true)
                 {
